Fixed OverflowY

--- a/christmas.css
+++ b/christmas.css
@@ -8,6 +8,7 @@ body {
     height: 100vh;
     display: grid;
     place-items: center;
+    overflow-y: scroll;
 }
 .box {
     position: relative;
